[skip ci] Update runner version.

--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -82,7 +82,7 @@ jobs:
           path: ./scripts
 
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container:
       image: docker://nwndotnet/nss2csharp:latest
     needs: [download]
